# CineWeave

./: .gitignore  Cargo.toml  LICENSE  README.md  package.json
.github/workflows/: ci.yml
apps/cli/src/: index.js
apps/desktop-shell/: server.js
apps/desktop-shell/public/: app.js  browser-adapter.js  index.html  styles.css
crates/media-core/: Cargo.toml
crates/media-core/src/: adapter.rs  lib.rs  main.rs  persistence.rs  timeline.rs
docs/: architecture.md  desktop-shell-integration.md  frontend-adapter.md  literature-review.md  project-plan.md
research/upstreams/CLI-Anything/: .gitignore  CONTRIBUTING.md  README.md  README_CN.md  SECURITY.md  registry.json
research/upstreams/CLI-Anything/.claude-plugin/: marketplace.json
research/upstreams/OpenCut/: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  biome.json  docker-compose.yml  package.json  tsconfig.json  turbo.json  wrangler.jsonc
research/upstreams/OpenCut/rust/crates/time/: Cargo.toml
research/upstreams/OpenCut/rust/crates/time/src/: time.rs
research/upstreams/OpenCut/rust/wasm/: Cargo.toml  README.md
research/upstreams/OpenCut/rust/wasm/src/: wasm.rs
research/upstreams/capcut-mate/: .gitignore  README.md  README.zh.md  config.py  docker-compose.example.yaml  docker-compose.yaml  main.py  pyproject.toml
scripts/: sync-to-desktop.ps1  test-adapter.ps1  test-rust.ps1
tests/: all.test.js  desktop-adapter.test.js  desktop-shell-server.test.js  domain-schema.test.js  ffmpeg-compiler.test.js  intent-parser.test.js  project-store.test.js  task-compiler.test.js
(+1009 files in other folders)
