[package]
name = "media-core"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Core planning primitives for the CineWeave media engine."

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[lib]
name = "media_core"
path = "src/lib.rs"

[[bin]]
name = "media-core"
path = "src/main.rs"
