[package]
name = "opencut-wasm"
version = "0.1.2"
edition = "2024"
description = "Shared video editor logic compiled to WebAssembly"
repository = "https://github.com/opencut/opencut"
license = "MIT"

[lib]
path = "src/wasm.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
time = { version = "0.1.0", path = "../crates/time", features = ["wasm"] }
